<resources>
    <string name="app_name">LoansApp</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="do_you_accept_something">Do you accept something?</string>
    <string name="you_don_t_have_account_yet_go_to_register_page">You don\'t have account yet? Go to Register page!</string>
    <string name="you_already_have_account_go_to_login_page">You already have account? Go to Login page!</string>
    <string name="title_app_icon" translatable="false">Title app icon</string>
    <string name="name">Name</string>
    <string name="you_entered_your_username_or_password_incorrectly">You entered your username or password incorrectly</string>
    <string name="something_went_wrong_try_later">Something went wrong. Try later</string>
    <string name="check_your_internet_connection">Check your internet connection</string>
    <string name="name_or_password_is_invalid">Name or password is invalid</string>
    <string name="you_successfully_registered">You successfully registered! Now you might try login with your data :)</string>
    <string name="user_with_the_same_data_already_exist">User with the same data already exist</string>
    <string name="your_loans">Your loans</string>
    <string name="loan_conditions_for_you">Loan conditions for you</string>
    <string name="if_you_accept_with_it_just_click" translatable="false">If you accept with it, just click!</string>
    <string name="percent_template" translatable="false">%.2f %%</string>
    <string name="period_template">%d months</string>
    <string name="max_amount_template">Max %d rub</string>
    <string name="amount_template">Amount: %.0f rub</string>
    <string name="state_template">State: %s</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="choose_amount">Choose amount</string>
    <string name="create_loan">Create loan</string>
    <string name="conditions_template">With %.2f%% and %d months</string>
    <string name="accept_loan_creation_information_template">Your name: %s \nYour last name: %s \nYour phone number: %s \nAmount: %d \nPercent: %.2f \nPeriod: %d</string>
    <string name="loan_created_information_template">Loan number: %d \nYour name: %s \nYour last name: %s \nYour phone number: %s \nAmount: %d \nPercent: %.2f \nPeriod: %d \nDate of loan creation: %s \nLoan state: %s</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="your_loan_created">Your loan created!</string>
    <string name="excellent">Excellent!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="name_or_last_name_or_phone_number_is_invalid">Name or last name or phone number is invalid</string>
    <string name="i_see">I see</string>
    <string name="loan">Loan</string>
    <string name="you_do_not_have_any_loans_yet">You do not have any loans yet</string>
    <string name="this_loan_is_unavailable_try_another">This loan is unavailable. Try another</string>
    <string name="trouble_with_authentication_try_to_reenter">Trouble with authentication. Try to reenter</string>
    <string name="loan_state_registered">State: registered</string>
    <string name="loan_state_approved">State: approved</string>
    <string name="loan_state_rejected">State: rejected</string>
    <string name="loan_state_unknown">State: unknown</string>
    <string name="just_click_to_get">Just click to get!</string>
    <string name="just_click_to_get_or_swipe_to_get_next">Just click to get or swipe to get next!</string>
    <string name="refresh_data" translatable="false">refresh data</string>
    <string name="logout">Logout</string>
    <string name="change_theme">Change theme</string>
    <string name="change_language">Change language</string>
    <string name="russian">Russian</string>
    <string name="english">English</string>
    <string name="cancel">Cancel</string>
    <string name="change">Change</string>
    <string name="you_see_cached_data">You see cached data</string>
    <string name="next">Next</string>
    <string name="get_started">Get started</string>
    <string name="on_boarding_title_1">Choose loan you want</string>
    <string name="on_boarding_description_1">You might click on the loan card or swipe if you don\'t like the conditions</string>
    <string name="on_boarding_title_2">Make loan</string>
    <string name="on_boarding_description_2">Fill necessary fields to make your loan</string>
    <string name="on_boarding_title_3">Loans history</string>
    <string name="on_boarding_description_3">After you make your first loan you can see history of your loans</string>
    <string name="on_boarding_title_4">App bar possibilities</string>
    <string name="on_boarding_description_4">With app bar menu you can change language, theme, update content on screen or logout from account</string>
    <string name="notification_channel_id" translatable="false">loans_channel</string>
    <string name="notification_channel_name" translatable="false">Loans</string>
    <string name="notification_title">LoansApp</string>
    <string name="do_not_forget_about_loans">Do not forget about loans</string>
    <string name="loans_count_template">You have %d unpaid loans</string>
</resources>