<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="visible"
    app:cardBackgroundColor="?backgroundColor"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registerNameField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/name"
            android:paddingHorizontal="@dimen/enter_screen_horizontal_padding_margin"
            app:startIconContentDescription="@string/name"
            app:startIconDrawable="@drawable/ic_baseline_person_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="?colorOnBackground" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registerPasswordField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/password"
            android:paddingHorizontal="@dimen/enter_screen_horizontal_padding_margin"
            app:endIconMode="password_toggle"
            app:startIconContentDescription="@string/password"
            app:startIconDrawable="@drawable/ic_baseline_password_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="?colorOnBackground" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/enter_screen_horizontal_padding_margin"
            android:layout_marginBottom="24dp"
            android:text="@string/do_you_accept_something"
            android:textColor="?colorOnBackground" />

        <androidx.cardview.widget.CardView
            android:id="@+id/registerErrorCard"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/enter_screen_horizontal_padding_margin"
            android:alpha="0"
            android:visibility="gone"
            app:cardBackgroundColor="?colorError"
            app:cardCornerRadius="8dp">

            <TextView
                android:id="@+id/registerErrorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                android:textAlignment="center"
                android:textColor="?colorOnError"
                tools:text="Something went wrong" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/registerSuccessCard"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/enter_screen_horizontal_padding_margin"
            android:alpha="0"
            android:visibility="gone"
            app:cardBackgroundColor="?colorPrimary"
            app:cardCornerRadius="8dp">

            <TextView
                android:id="@+id/registerSuccessText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                android:textAlignment="center"
                android:textColor="?colorOnPrimary"
                tools:text="Something went wrong" />
        </androidx.cardview.widget.CardView>

        <ProgressBar
            android:id="@+id/registerProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registerButton"
            style="@style/SimpleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/enter_screen_horizontal_padding_margin"
            android:text="@string/register"
            app:cornerRadius="8dp" />

        <TextView
            android:id="@+id/registerNoticeText"
            style="@style/TextOnBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/enter_screen_horizontal_padding_margin"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/you_already_have_account_go_to_login_page"
            android:textColor="?colorOnBackground" />
    </LinearLayout>
</androidx.cardview.widget.CardView>