<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?backgroundColor"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.createloan.CreateLoanFragment">

    <ImageView
        android:id="@+id/backArrowImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backArrowImage">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/createLoanTitle"
                style="@style/TitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/open_sans_bold"
                android:gravity="center"
                android:text="@string/create_loan"
                android:textColor="?colorOnBackground" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:paddingHorizontal="@dimen/create_screen_horizontal_padding_margin"
                app:startIconContentDescription="@string/name"
                app:startIconDrawable="@drawable/ic_baseline_person_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:inputType="text"
                    android:textColor="?colorOnBackground" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastNameField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:paddingHorizontal="@dimen/create_screen_horizontal_padding_margin"
                app:startIconContentDescription="@string/last_name"
                app:startIconDrawable="@drawable/ic_baseline_person_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:inputType="text"
                    android:textColor="?colorOnBackground" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneNumberField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:paddingHorizontal="@dimen/create_screen_horizontal_padding_margin"
                app:startIconContentDescription="@string/phone_number"
                app:startIconDrawable="@drawable/ic_baseline_local_phone_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneNumberEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:inputType="numberDecimal"
                    android:textColor="?colorOnBackground" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/amountSliderTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/create_screen_horizontal_padding_margin"
                android:text="@string/choose_amount"
                android:textColor="?colorOnBackground" />

            <com.google.android.material.slider.Slider
                android:id="@+id/amountSlider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/create_screen_horizontal_padding_margin"
                android:layout_marginBottom="8dp"
                android:minHeight="50dp" />

            <TextView
                android:id="@+id/amountText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:textColor="?colorOnBackground"
                android:textSize="18sp"
                tools:text="5500" />

            <TextView
                android:id="@+id/conditionsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:paddingHorizontal="@dimen/create_screen_horizontal_padding_margin"
                android:textColor="?colorOnBackground"
                tools:text="With 5% and 45 months" />

            <androidx.cardview.widget.CardView
                android:id="@+id/createLoanErrorCard"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/enter_screen_horizontal_padding_margin"
                android:alpha="0"
                android:visibility="gone"
                app:cardBackgroundColor="?colorError"
                app:cardCornerRadius="8dp">

                <TextView
                    android:id="@+id/createLoanErrorText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp"
                    android:text="@string/this_loan_is_unavailable_try_another"
                    android:textAlignment="center"
                    android:textColor="?colorOnError"
                    tools:text="Something went wrong" />
            </androidx.cardview.widget.CardView>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0"
                android:visibility="gone" />

            <Button
                android:id="@+id/createLoanButton"
                style="@style/SimpleButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/create_screen_horizontal_padding_margin"
                android:text="@string/create_loan" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>